--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "lesson_7",
+  "name": "lesson_8",
   "version": "1.0.0",
-  "description": "Автоматизация проекта",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Aleksandr Suberlyak",
+  "author": "Aleksander Suberlyak",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean-css": "^3.3.0",
     "gulp-uglify": "^2.1.2",
     "gulp-useref": "^3.1.2"
   }
