--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2",
-    "gulp-useref": "^3.1.2"
+    "gulp-useref": "^3.1.2",
+    "gulp-clean-css": "^3.3.0",
   }
 }
